--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Personal
+/Saved
+/Intermediate
+/.vs
+/Build
+*.sln
